fixed spacing issue in relation to paragraph

--- a/css/module.css
+++ b/css/module.css
@@ -46,15 +46,6 @@
   background: rgba(0,0,0,0.5);
 }
 
-.about_header {
-  overflow: hidden;
-  position: fixed;
-  margin: -10em 8px 0px 0em;
-  width: 100%;
-  background: rgba(0,0,0,0.5);
-}
-
-
 .logo {
   float: left;
   color: white;
@@ -86,11 +77,12 @@ margin: 25px 0px 0px 20em;
 /* paragraph styling*/
 
 p {
-  margin: 10em auto auto 20em;
+  margin: 15em auto auto 7em;
   background: rgba(0,0,0,0.5);
   color: white;
   padding: 2em 2em;
   width: 75%;
+  position: absolute;
 }
 
 /* page footers */
